--- a/package.json
+++ b/package.json
@@ -6,18 +6,38 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
-    "develop": "gatsby develop",
+    "develop": "env-cmd gatsby develop",
     "format": "prettier --write src/**/*.{js,jsx}",
     "start": "npm run develop",
     "serve": "gatsby serve",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
   },
   "dependencies": {
-    "gatsby": "^2.4.6",
+    "@contentful/rich-text-react-renderer": "^13.2.0",
+    "fsevents": "^2.0.7",
+    "gatsby": "^2.5.0",
+    "gatsby-plugin-manifest": "^2.1.1",
+    "gatsby-plugin-react-helmet": "^3.0.12",
+    "gatsby-plugin-sass": "^2.0.11",
+    "gatsby-plugin-sharp": "^2.0.37",
+    "gatsby-remark-images": "^3.0.10",
+    "gatsby-remark-images-contentful": "^2.0.11",
+    "gatsby-remark-relative-images": "^0.2.2",
+    "gatsby-source-contentful": "^2.0.59",
+    "gatsby-source-filesystem": "^2.0.36",
+    "gatsby-transformer-remark": "^2.3.12",
+    "gatsby-transformer-sharp": "^2.1.19",
+    "gatsby-transformer-sqip": "^2.0.35",
+    "graphql-playground-middleware-lambda": "^1.7.13",
+    "node-pre-gyp": "^0.13.0",
+    "node-sass": "^4.12.0",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.0",
+    "typescript": "^3.4.5"
   },
   "devDependencies": {
+    "env-cmd": "^9.0.1",
     "prettier": "^1.17.1"
   },
   "repository": {
